Begin showing mixed results, with separators.
Add lots of TODO statements as well.

--- a/dxr/static/css/dxr.css
+++ b/dxr/static/css/dxr.css
@@ -204,6 +204,10 @@ mark {
 .file tr:hover {
     background: none;
 }
+.result-separator {
+    font-weight: bold;
+    font-size: 1.3em;
+}
 .results tr,
 .file tr {
     border: 0;
