--- a/dxr/static/templates/partial/results_container.html
+++ b/dxr/static/templates/partial/results_container.html
@@ -3,7 +3,7 @@
 
 {{ results_header(result_count, result_count_formatted, top_of_tree, tree_tuples, tree) }}
 
-{% if results|length > 0 %}
+{% if results|length > 0 or is_mixed %}
   <table class="results">
     <caption class="visually-hidden">Query matches</caption>
     <thead class="visually-hidden">
