--- a/dxr/static/css/dxr.css
+++ b/dxr/static/css/dxr.css
@@ -159,12 +159,6 @@ tr.binary_row > td {
 tr.binary_row {
     opacity: 0.6;
 }
-tbody.mixed_result td {
-    padding-bottom: .5em;
-}
-tbody.mixed_result {
-    background: rgb(245, 245, 220);
-}
 .highlighted,
 .multihighlight {
     background: none repeat scroll 0 0 rgb(255, 255, 204);
@@ -202,6 +196,13 @@ mark {
 }
 .logo a:focus {
     background-color: transparent;
+}
+
+/* promoted mixed stuff */
+.mixed_container {
+    /* TODO next */
+    border: 2px solid #000000;
+    padding: 15px;
 }
 
 /* results */
@@ -421,6 +422,8 @@ mark {
 .breadcrumbs a:visited,
 .bubble a:link,
 .bubble a:visited,
+.mixed_path a:link,
+.mixed_path a:visited,
 .result-head a:link,
 .result-head a:visited {
     color: #0095dd;
