--- a/dxr/static/templates/partial/results.html
+++ b/dxr/static/templates/partial/results.html
@@ -2,7 +2,7 @@
 
 {% macro results_list(results, www_root, tree) -%}
   {% for result in results %}
-    <tbody class="result {% if result.is_mixed %} mixed_result {% endif %}" data-path="{{ result.path }}">
+    <tbody class="result" data-path="{{ result.path }}">
       <tr class="result-head {% if result.is_binary %} binary_row {% endif %}">
         <td class="left-column">
           <div class="{{result.iconClass}} icon-container"></div>
