--- a/dxr/static/templates/partial/results_container.html
+++ b/dxr/static/templates/partial/results_container.html
@@ -1,10 +1,10 @@
-{% from "partial/mixed.html" import mixed_list -%}
+{% from "partial/promoted.html" import promoted_list -%}
 {% from "partial/results.html" import results_list -%}
 {% from "partial/results_header.html" import results_header -%}
 
-{% if mixed|length > 0 %}
-  <div class="mixed_container">
-    {{ mixed_list(mixed, www_root, tree) }}
+{% if promoted|length > 0 %}
+  <div class="promoted_container">
+    {{ promoted_list(promoted, www_root, tree) }}
   </div>
 {% endif %}
 
