--- a/dxr/static/templates/partial/results_container.html
+++ b/dxr/static/templates/partial/results_container.html
@@ -3,6 +3,7 @@
 {% from "partial/results_header.html" import results_header -%}
 
 {% if promoted|length > 0 %}
+  <span style="padding-left: 20px;">Top matches:</span>
   <div class="promoted_container">
     {{ promoted_list(promoted, www_root, tree) }}
   </div>
