--- a/dxr/static/templates/folder.html
+++ b/dxr/static/templates/folder.html
@@ -29,21 +29,24 @@
         <th scope="col">Name</th>
         <th scope="col">Modified</th>
         <th scope="col">Size</th>
+        <th scope="col">Description</th>
       </tr>
     </thead>
     <tbody>
-      {% for icon, name, modified, size, relative_url, is_binary in files_and_folders %}
+      {% for icon, name, modified, size, description, relative_url, is_binary in files_and_folders %}
         {% if is_binary %}
           <tr class="binary_row">
             <td><span class="icon {{ icon }}">{{ name }}</span></td>
             <td>{{ '' if modified is none else modified.strftime("%Y %b %d %H:%m") }}</td>
             <td>{{ '' if size is none else size|filesizeformat }}</td>
+            <td>{{ description }}</td>
           </tr>
         {% else %}
           <tr>
             <td><a href="{{ relative_url }}" class="icon {{ icon }}">{{ name }}</a></td>
             <td><a href="{{ relative_url }}">{{ '' if modified is none else modified.strftime("%Y %b %d %H:%m") }}</a></td>
             <td><a href="{{ relative_url }}">{{ '' if size is none else size|filesizeformat }}</a></td>
+            <td><a href="{{ relative_url }}">{{ description[:70] }}</a></td>
           </tr>
         {% endif %}
       {% endfor %}
