--- a/dxr/templates/layout.html
+++ b/dxr/templates/layout.html
@@ -14,6 +14,8 @@
       <link href="{{ url_for('.static', filename='css/code-style.css') }}" rel="stylesheet" type="text/css" media="screen" />
       <link href="{{ url_for('.static', filename='css/selector-common.css') }}" rel="stylesheet" type="text/css" media="screen" />
       <link href="{{ url_for('.static', filename='css/filter.css') }}" rel="stylesheet" type="text/css" media="screen" />
+      <link href="{{ url_for('.static', filename='css/jquery-ui.css') }}" rel="stylesheet" type="text/css" media="screen" />
+      <link href="{{ url_for('.static', filename='css/jquery-ui.theme.css') }}" rel="stylesheet" type="text/css" media="screen" />
     {% endblock %}
   </head>
   <body>
@@ -91,11 +93,12 @@
     {% set eof = True if state_eof else False %}
 
     <!-- avoid inline JS and use data attributes instead. Hackey but hey... -->
-    <span id="data" data-root="{{ www_root }}" data-lines="{{ url_for('.lines', tree=tree) }}" data-search="{{ url_for('.search', tree=tree) }}" data-tree="{{ tree }}"></span>
+    <span id="data" data-root="{{ www_root }}" data-autocomplete="{{ url_for('.autocomplete', tree=tree) }}" data-lines="{{ url_for('.lines', tree=tree) }}" data-search="{{ url_for('.search', tree=tree) }}" data-tree="{{ tree }}"></span>
     <span id="state" data-offset="{{state_offset or 0}}" data-limit="{{state_limit or 100}}" data-results-line-count="{{ results_line_count }}" data-eof="{{ eof }}"></span>
 
     {% block site_js %}
       <script src="{{ url_for('.static', filename='js/libs/jquery203.js') }}"></script>
+      <script src="{{ url_for('.static', filename='js/libs/jquery-ui.min.js') }}"></script>
       <script src="{{ url_for('.static', filename='js/libs/nunjucks-slim.min.js') }}"></script>
       <script src="{{ url_for('.static', filename='js/templates.js') }}"></script>
       <script src="{{ url_for('.static', filename='js/utils.js') }}"></script>
