Strip whitespace on path segment renders.
Removes spaces in copies of paths in results pages.
Fixes bug 1288853.

--- a/dxr/templates/nunjucks/path_line.html
+++ b/dxr/templates/nunjucks/path_line.html
@@ -1,6 +1,4 @@
 {%- if not is_first_or_only -%}
 <span class="path-separator">/</span>
 {%- endif -%}
-<a href="{{ url }}" {%- if is_dir %} data-path="{{ data_path }}" {% endif %}>
-    {{ display_path }}
-</a>
+<a href="{{ url }}" {%- if is_dir %} data-path="{{ data_path }}" {% endif %}>{{ display_path }}</a>
