--- a/dxr/templates/nunjucks/results.html
+++ b/dxr/templates/nunjucks/results.html
@@ -7,9 +7,7 @@
         <div class="left-column">
           <div class="{{result.iconClass}} icon-container"></div>
         </div>
-        <div>
-          {{ result.pathLine|safe }}
-        </div>
+        <div>{{ result.pathLine|safe }}</div>
       </div>
       {{ result_lines(result, www_root, tree) }}
     </div>
